# robot_runner

./: .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.es.md  README.md  README.pt-BR.md  execution_app.py  firebase.json  index.html  main.py  out.json  package-lock.json  package.json  read_config.cjs  remote_config.json  requirements.txt  robot_runner.py  tailwind.config.js  temp_store.txt  temp_system.rs  vite.config.ts
.agents/profiles/: agents.md  antigravity.md  claude.md  gemini.md
.agents/rules/: adb-best-practices.md  ai-engineering.md  atomic-design.md  debugging-logging.md  desktop-dev.md  documentation.md  exploration-engine.md  firebase-integration.md  qa-automation-specialist.md  react-frontend.md  robot-appium-testing.md  rust-backend.md  ui-ux-design.md
.agents/workflows/: adb-diagnostics.md  fetch-ai-models.md  ui-visual-bug-resolution.md
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: state.py
app/core/: adb_manager.py  scheduler.py  scrcpy_manager.py
app/models/: device.py  settings.py
app/views/: apk_manager_view.py  devices_view.py  execution_view.py  main_view.py  recorder_view.py  run_view.py  scheduler_view.py  settings_view.py
backend/: adb_command_manager.py  adb_wireless.py  api_models.py  appium_manager.py  file_browser.py  inspector_manager.py  main.py  performance_manager.py  requirements.txt  scrcpy_manager.py  screenshot_manager.py  settings_manager.py  test_runner.py
companion/: gradlew.bat  settings.gradle.kts
companion/app/: build.gradle.kts
config/: settings.json
docs/: PROJETO_DE_EXTENSAO.md  RELATORIO_PROJETO_EXTENSIONISTA.md  SETUP.md  USAGE.md
docs/en/: AIGeneratorSubTab.md  AboutPage.md  AppsSubTab.md  CheckupSubTab.md  CommandsSubTab.md  ConnectSubTab.md  DmesgSubTab.md  HardwareSubTab.md  HistorySubTab.md  HomeSubTab.md  InspectorSubTab.md  LogcatSubTab.md  MapperSubTab.md  PerformanceSubTab.md  RunConsole.md  SETUP.md  SettingsPage.md  StopwatchSubTab.md  TROUBLESHOOTING.md  TestsSubTab.md
docs/es/: AIGeneratorSubTab.md  AboutPage.md  AppsSubTab.md  CheckupSubTab.md  CommandsSubTab.md  ConnectSubTab.md  (+15 more)
frontend/: package-lock.json  package.json
locales/: en_US.json  es_ES.json  i18n.py  pt_BR.json
public/: login.html
resources/: chrome.resource
scripts/: bump_version.js  web_capture.cjs  web_capture.js  web_interaction.cjs  web_record.cjs
src/: App.css  App.tsx  ai_assistant.py  app_utils.py  device_utils.py  log_parser.py  log_writer.py  main.tsx  performance_monitor.py  shell_manager.py
src-tauri/: .gitignore  Cargo.toml  libnull.rlib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_context.rs  appium.rs  auth.rs  cmd_registry.rs  cmd_utils.rs  companion.rs  db.rs  env_setup.rs  errors.rs  files.rs  git.rs  image_utils.rs  inspector.rs  lib.rs  logs.rs  monitor.rs  ngrok.rs  runner.rs  security.rs  system.rs  updater.rs  xml_parser.rs
src-tauri/src/adb/: device.rs  dmesg.rs  hardware.rs  logcat.rs  media.rs  mod.rs  network.rs  packages.rs  scrcpy.rs  shell.rs  stats.rs  wireless.rs
suites/: chrome.txt
tauri_app/: package-lock.json  package.json  tsc_output.txt  vite.config.ts
tests/: chrome.robot  test1.robot  test2.robot
(+313 files in other folders)
