[package]
name = "robot_runner"
version = "2.2.29"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
walkdir = "2"
base64 = "0.22.1"
regex = "1.12.2"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2.5.5"
roxmltree = "0.20"
rand = "0.8"
nosleep = "0.2"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
once_cell = "1.20"
zstd = "0.13"
tokio = { version = "1", features = ["rt", "process", "macros", "time", "fs", "io-util"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
